create scheduler routine